# Gaussian-elimination-Equations-Solver

./: .gitignore  1.txt  CMakeLists.txt  EquationsSolver  main.cpp  readme.md
EquationsSolver.dSYM/Contents/: Info.plist
EquationsSolver.dSYM/Contents/Resources/DWARF/: EquationsSolver
include/: debug.hpp  gaussin.hpp  io.hpp  matrix.hpp
src/: debug.cpp  gaussin.cpp  io.cpp  main.cpp
